--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://paulbrie.github.io/test",
+  "homepage": "New-Project12-React",
   "name": "new-project12",
   "version": "1.0.0",
   "private": true,
